[package]
name = "pic8259_simple"
version = "0.1.1"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Kernel-space interface to the 8259 and 8259A interrupt controllers"
repository = "https://github.com/cmsd2/pic8259_simple"
readme = "README.md"
keywords = ["no_std", "kernel", "interrupts"]
license = "Apache-2.0 OR MIT"

[dependencies]
cpuio = "0.3.0"
